--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,11 +6,27 @@
 }
 body {
   font-family: "Merriweather", serif;
-  font-family: "Roboto", sans-serif;
 }
 .container {
   width: 1320px;
   margin: 0 auto;
+}
+.section-greeting {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+}
+.section-title {
+  color: #070211;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 16px;
 }
 /* Banner section styles */
 
@@ -24,8 +40,8 @@ body {
   position: relative;
   z-index: 1;
 }
-.banner::after{
-  content: ' ';
+.banner::after {
+  content: " ";
   position: absolute;
   background-color: #000000;
   top: 0;
@@ -33,10 +49,10 @@ body {
   bottom: 0;
   left: 0;
   z-index: -1;
-  opacity: .6;
+  opacity: 0.6;
 }
-.banner-contain{
-    width: 70%;
+.banner-contain {
+  width: 70%;
 }
 .banner h3 {
   color: #fff;
@@ -44,7 +60,6 @@ body {
   font-size: 32px;
   font-weight: 400;
   line-height: normal;
-
 }
 .banner h1 {
   color: #fff;
@@ -52,4 +67,23 @@ body {
   font-size: 72px;
   font-weight: 900;
   line-height: 95px;
+}
+
+/* categories part styles */
+#categories {
+  margin: 40px 0;
+}
+#categories h1 {
+  color: #f00;
+  text-align: center;
+  font-size: 88px;
+  font-weight: 700;
+  line-height: normal;
+  margin: 120px 0 48px 0;
+}
+.categories-img{
+  width: 802px;
+  height: 500px;
+  margin: 0 auto;
+  margin-top: 48px;
 }
