--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,18 @@ body {
   line-height: normal;
   margin-top: 16px;
 }
+.btn-primary {
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 8px;
+  background: #f00;
+  padding: 16px 32px;
+  border: none;
+}
 /* Banner section styles */
 
 .banner {
@@ -81,9 +93,52 @@ body {
   line-height: normal;
   margin: 120px 0 48px 0;
 }
-.categories-img{
+.categories-img {
   width: 802px;
   height: 500px;
   margin: 0 auto;
   margin-top: 48px;
+}
+
+/* midnight part css styles */
+.midnight {
+  background-image: url("../images/Vectorrr.png");
+  width: 1320px;
+  height: 600px;
+  margin: 120px 0;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  padding-left: 126px;
+}
+.midnight::after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.6;
+  background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);;
+}
+.midnight-content {
+  width: 60%;
+}
+.midnight-content h1 {
+  color: #fff;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 88px;
+  letter-spacing: 7px;
+  margin-bottom: 0;
+}
+.midnight-content p {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 10px 0 48px 0;
 }
